survivor-network/admin-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: survivor-apps
spec:
  selector:
    app: admin-service
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
